{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 38,
  "lineage": "bbb2ff5c-2d6f-de4a-aba3-37128d461d11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a744366f32c4667a",
            "domain": "vpc",
            "id": "eipalloc-0a744366f32c4667a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-231-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.231.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-ngw-ip"
            },
            "tags_all": {
              "Name": "demo-ngw-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:internet-gateway/igw-0e6bf317c59748515",
            "id": "igw-0e6bf317c59748515",
            "owner_id": "026090559975",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-06045591026eb0539"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a744366f32c4667a",
            "association_id": "eipassoc-083e5aec6527f3b1a",
            "connectivity_type": "public",
            "id": "nat-08df625cbc194779b",
            "network_interface_id": "eni-090716f9cfb5819b7",
            "private_ip": "10.1.0.129",
            "public_ip": "3.7.231.65",
            "subnet_id": "subnet-06ea530d9dcf60de0",
            "tags": {
              "Name": "demo-ngw"
            },
            "tags_all": {
              "Name": "demo-ngw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d433785484a018f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08df625cbc194779b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d433785484a018f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:route-table/rtb-035496d40164eb8a7",
            "id": "rtb-035496d40164eb8a7",
            "owner_id": "026090559975",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6bf317c59748515",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-Default-rt"
            },
            "tags_all": {
              "Name": "demo-Default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06045591026eb0539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baf7a51594808ab2",
            "route_table_id": "rtb-035496d40164eb8a7",
            "subnet_id": "subnet-06ea530d9dcf60de0"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e23d9943d8515745",
            "route_table_id": "rtb-035496d40164eb8a7",
            "subnet_id": "subnet-0db96fc1765f82b50"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:security-group/sg-0b939ddb6fa85fe6f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b939ddb6fa85fe6f",
            "ingress": [],
            "name": "demo-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "026090559975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "demo-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06045591026eb0539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:security-group/sg-042a1f1ddd8439021",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-042a1f1ddd8439021",
            "ingress": [],
            "name": "demo-Worker-sg",
            "name_prefix": "",
            "owner_id": "026090559975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-Worker-sg"
            },
            "tags_all": {
              "Name": "demo-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06045591026eb0539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:security-group/sg-0596e14f53efdfa02",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-0596e14f53efdfa02",
            "ingress": [],
            "name": "demo-cluster-sg",
            "name_prefix": "",
            "owner_id": "026090559975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-cluster-sg"
            },
            "tags_all": {
              "Name": "demo-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06045591026eb0539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:security-group/sg-0c878f0647e92a8ea",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c878f0647e92a8ea",
            "ingress": [],
            "name": "demo-node-sg",
            "name_prefix": "",
            "owner_id": "026090559975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-node-sg",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "tags_all": {
              "Name": "demo-node-sg",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06045591026eb0539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:security-group/sg-0486e077423f2ec6c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0486e077423f2ec6c",
            "ingress": [],
            "name": "demo-Public-sg",
            "name_prefix": "",
            "owner_id": "026090559975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-Public-sg"
            },
            "tags_all": {
              "Name": "demo-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06045591026eb0539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1247366079",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0596e14f53efdfa02",
            "security_group_rule_id": "sgr-0d22cc56e8e070551",
            "self": false,
            "source_security_group_id": "sg-0c878f0647e92a8ea",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-323367102",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0596e14f53efdfa02",
            "security_group_rule_id": "sgr-0f68918028db71a53",
            "self": false,
            "source_security_group_id": "sg-0c878f0647e92a8ea",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24",
              "10.1.1.0/24",
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-447944080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b939ddb6fa85fe6f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1369158591",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b939ddb6fa85fe6f",
            "security_group_rule_id": "sgr-09960fd5bc33a279e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4114433353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-042a1f1ddd8439021",
            "security_group_rule_id": "sgr-02c78879977e7f7c9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24",
              "10.1.1.0/24",
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1866121430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-042a1f1ddd8439021",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3767445351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c878f0647e92a8ea",
            "security_group_rule_id": "sgr-0b3c86d54a7963794",
            "self": false,
            "source_security_group_id": "sg-0596e14f53efdfa02",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2322996142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042a1f1ddd8439021",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1547365699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c878f0647e92a8ea",
            "security_group_rule_id": "sgr-082a4b1b325ab7f49",
            "self": false,
            "source_security_group_id": "sg-0c878f0647e92a8ea",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1080834142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0486e077423f2ec6c",
            "security_group_rule_id": "sgr-03a9e7a9917a8feb8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-442230588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0486e077423f2ec6c",
            "security_group_rule_id": "sgr-0a66bc391cb0a5665",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-119986578",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0486e077423f2ec6c",
            "security_group_rule_id": "sgr-0b376ffbcccc2c822",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:subnet/subnet-0ca71c134b108bad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca71c134b108bad0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090559975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-private-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06045591026eb0539"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:subnet/subnet-01d5a57c5f607a09b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d5a57c5f607a09b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090559975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-private-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06045591026eb0539"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:subnet/subnet-06ea530d9dcf60de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ea530d9dcf60de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090559975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-public-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06045591026eb0539"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:subnet/subnet-0db96fc1765f82b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db96fc1765f82b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090559975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-public-sg",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06045591026eb0539"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090559975:vpc/vpc-06045591026eb0539",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-094cd3df477acbfd2",
            "default_route_table_id": "rtb-02d433785484a018f",
            "default_security_group_id": "sg-0c4ad82d5820b00f5",
            "dhcp_options_id": "dopt-06aad060d9826b43f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06045591026eb0539",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d433785484a018f",
            "owner_id": "026090559975",
            "tags": {
              "Name": "demo-vpc",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-vpc",
              "kubernetes.io/cluster/demo-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}